feat: Bulk update