@@ -1,149 +1,101 @@
 package com.decade.practice.presence.application.services;
 
-import com.decade.practice.presence.application.ports.in.PresenceSetter;
 import com.decade.practice.presence.application.ports.out.PresenceRepository;
+import com.decade.practice.presence.application.ports.out.ScoreEngine;
 import com.decade.practice.presence.application.query.PresenceService;
 import com.decade.practice.presence.domain.Presence;
-import com.decade.practice.presence.dto.ChatPresenceResponse;
-import com.decade.practice.presence.dto.PresenceRecommendationResponse;
-import com.decade.practice.presence.dto.mapper.PresenceMapper;
+import com.decade.practice.presence.dto.BuddyResponse;
+import com.decade.practice.presence.dto.RoomPresenceResponse;
+import com.decade.practice.users.api.UserApi;
+import com.decade.practice.users.api.UserInfo;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.redis.core.RedisCallback;
-import org.springframework.data.redis.core.RedisTemplate;
-import org.springframework.data.redis.core.ZSetOperations;
 import org.springframework.stereotype.Service;
 
-import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.*;
 import java.util.function.BiFunction;
+import java.util.function.Function;
 import java.util.stream.Collectors;
-
-import static com.decade.practice.presence.utils.EnthusiastUtils.determineEnthusiastId;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
-public class PresenceManager implements PresenceService, PresenceSetter {
-
-      private static final String KEYSPACE = "PRESENCES";
-      private static final int TTL = 5 * 60;
+public class PresenceManager implements PresenceService {
 
       private final PresenceRepository presences;
-      private final RedisTemplate<String, Object> redisTemplate;
-      private final PresenceMapper presenceMapper;
-
+      private final ScoreEngine scoreEngine;
+      private final UserApi userApi;
 
       @Override
-      public Map<String, ChatPresenceResponse> find(UUID caller, Set<String> chatIds) {
-            List<String> chatList = chatIds.stream().toList();
-            List<Object> rawResults = redisTemplate.executePipelined(
-                      (RedisCallback<Object>) connection -> {
-
-                            chatList.forEach(chatId -> {
-                                  connection.zSetCommands().zRevRange(determineEnthusiastId(chatId).getBytes(), 0, 9);
-                            });
-                            return null;
-                      }
-            );
-
-            Map<String, ChatPresenceResponse> result = new HashMap<>();
-            Map<UUID, List<String>> enthusiastMap = new HashMap<>();
-
-            Set<UUID> allEnthusiasts = new HashSet<>();
-
-            for (int i = 0; i < rawResults.size(); i++) {
-                  Set<Object> rawSet = (Set<Object>) rawResults.get(i);
-
-                  String chatId = chatList.get(i);
-
-                  List<UUID> enthusiasts = rawSet.stream()
-                            .map(obj -> {
-                                  if (obj instanceof byte[] bytes) {
-                                        return new String(bytes, StandardCharsets.UTF_8);
+      public Map<String, RoomPresenceResponse> find(UUID caller, Set<String> chatIds) {
+            Map<String, List<String>> enthusiastMap = scoreEngine.findTopK(chatIds, 10);
+            Map<UUID, Set<String>> correspondingChatMap = new HashMap<>();
+            enthusiastMap.forEach((chatId, enthusiasts) -> {
+                  enthusiasts.forEach(enthusiast -> correspondingChatMap.compute(UUID.fromString(enthusiast),
+                            (id, chats) -> {
+                                  if (chats == null) {
+                                        chats = new HashSet<>();
                                   }
-                                  return (String) obj;
-                            })
-                            .map(UUID::fromString)
-                            .toList();
+                                  chats.add(chatId);
+                                  return chats;
+                            }));
+            });
 
-                  enthusiasts.forEach(
-                            enthusiast -> {
-                                  enthusiastMap.compute(enthusiast, new BiFunction<>() {
-                                        @Override
-                                        public List<String> apply(UUID uuid, List<String> chatIds) {
-                                              if (chatIds == null)
-                                                    chatIds = new ArrayList<>();
+            Map<String, RoomPresenceResponse> roomPresences = new HashMap<>();
 
-                                              chatIds.add(chatId);
-                                              return chatIds;
-                                        }
-                                  });
+            List<UUID> allEnthusiasts = enthusiastMap.values().parallelStream()
+                      .flatMap(new Function<List<String>, Stream<String>>() {
+                            @Override
+                            public Stream<String> apply(List<String> enthusiasts) {
+                                  return enthusiasts.parallelStream();
                             }
-                  );
-                  allEnthusiasts.addAll(enthusiasts);
-            }
+                      })
+                      .map(UUID::fromString)
+                      .distinct()
+                      .filter(enthusiast -> !enthusiast.equals(caller))
+                      .toList();
 
-            allEnthusiasts.remove(caller);
 
-            Iterable<Presence> presences = this.presences.findAllById(allEnthusiasts);
+            List<Presence> enthusiastPresences = this.presences.findAllById(allEnthusiasts);
 
-            presences.forEach(presence -> {
-                  List<String> correspondingChatIds = enthusiastMap.get(presence.getUserId());
+            enthusiastPresences.forEach(presence -> {
+                  Set<String> correspondingChatIds = correspondingChatMap.get(presence.getUserId());
                   correspondingChatIds.forEach(correspondingChatId -> {
 
-                        result.compute(correspondingChatId, new BiFunction<>() {
+                        roomPresences.compute(correspondingChatId, new BiFunction<>() {
                               @Override
-                              public ChatPresenceResponse apply(String chatId, ChatPresenceResponse chatPresenceResponse) {
+                              public RoomPresenceResponse apply(String chatId, RoomPresenceResponse existing) {
                                     Instant at = presence.getAt();
-                                    if (chatPresenceResponse != null) {
-                                          at = at.isAfter(chatPresenceResponse.at())
-                                                    ? at : chatPresenceResponse.at();
+                                    if (existing != null) {
+                                          at = at.isAfter(existing.at())
+                                                    ? at : existing.at();
                                     }
-                                    return new ChatPresenceResponse(chatId, at);
+                                    return new RoomPresenceResponse(chatId, at);
                               }
                         });
                   });
             });
-
-            return result;
+            return roomPresences;
       }
 
-
-      private void evict() {
-            redisTemplate.opsForZSet().removeRangeByScore(
-                      KEYSPACE, 0.0, Instant.now().getEpochSecond() - TTL
-            );
-      }
 
       @Override
-      public List<PresenceRecommendationResponse> findRecommendation(UUID userId) {
-            evict();
-            Set<ZSetOperations.TypedTuple<Object>> rangeWithScores = redisTemplate.opsForZSet().rangeWithScores(KEYSPACE, 0, -1);
-
-            if (rangeWithScores == null) {
-                  return new ArrayList<>();
-            }
-
-            List<Presence> result = rangeWithScores.stream()
-                      .map(tuple -> {
-                            String who = (String) tuple.getValue();
-                            return presences.findById(UUID.fromString(who)).orElse(null);
-                      })
-                      .filter(Objects::nonNull)
-                      .toList();
-
-            return result.stream()
-                      .filter(status -> !status.getUserId().equals(userId))
-                      .map(presenceMapper::map)
-                      .collect(Collectors.toList());
-      }
-
-      @Override
-      public PresenceRecommendationResponse set(UUID userId, String name, String avatar, Instant at) {
-            evict();
-            Presence presence = new Presence(userId, at, avatar, name);
-            redisTemplate.opsForZSet().add(KEYSPACE, presence.getUserId().toString(), presence.getAt().getEpochSecond());
-            presences.save(presence);
-            return presenceMapper.map(presence);
+      public List<BuddyResponse> findMyBuddies(UUID userId) {
+            List<UUID> buddies = scoreEngine.findTopK(userId.toString(), 20)
+                      .stream().map(UUID::fromString).toList();
+            Map<UUID, UserInfo> infoMap = userApi.getUserInfo(new HashSet<>(buddies));
+            Map<UUID, Presence> presenceMap = presences.findAllById(buddies)
+                      .stream().collect(Collectors.toMap(Presence::getUserId, Function.identity()));
+            return buddies.stream()
+                      .map(new Function<UUID, BuddyResponse>() {
+                            @Override
+                            public BuddyResponse apply(UUID buddy) {
+                                  Presence presence = presenceMap.get(buddy);
+                                  UserInfo info = infoMap.get(buddy);
+                                  if (presence == null || info == null)
+                                        return null;
+                                  return new BuddyResponse(presence.getUserId(), info.name(), info.avatar(), presence.getAt());
+                            }
+                      }).filter(Objects::nonNull).toList();
       }
 }
